# agent-eval

./: .gitignore  Development.md  Makefile  README.md  dataset_infos.json  publish.sh  pyproject.toml  sample-config-dataset-structure.yml  sample-config-hf-readme-metadata.yml  sample-config.yml  tag.sh
.github/workflows/: ci-tests.yml  ci-validate-schema.yml
scripts/: extract_paper_tables.py  generate_latex_from_jsonl.py  paper_plots.py  paper_plots.sh  paper_plots_model_mapping.json  publish.sh  regenerate_paper_tables.py  update_readme.py  update_schema.py  verify_paper_tables.py
src/agent_eval/: __init__.py  cli.py  config.py  log.py  score.py
src/agent_eval/config/: astabench.yml
src/agenteval/: __init__.py  cli.py  cli_utils.py  config.py  convert.py  interventions.py  local_cost.py  log.py  models.py  processor.py  repairs.py  schema_generator.py  score.py  summary.py  upload.py
src/agenteval/leaderboard/: dataset_features.yml  model_name_mapping.py  models.py  schema_generator.py  upload.py  view.py
tests/: conftest.py  test_cli.py  test_collect_model_usage.py  test_leaderboard_view.py  test_summary_utils.py  test_usage_compression.py
